# bookmarks-topics

./: .gitignore  README.md  Taskfile.yml  environment.yaml  pyproject.toml  requirements.txt
conf/: config.yaml
conf/hydra/: default.yaml
conf/paths/: default.yaml
conf/prompt/: default.yaml
conf/prompt/openai/: default.yaml  title_case.yaml
conf/seed_words/: custom.yaml  default.yaml
notebooks/: README.md  prompt.txt  topics.ipynb
src/bookmarks_topics/: __init__.py  _common.py  bookmarks.py  fetch.py  parse.py  topics.py
